<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.example.firstyalantistask.MainActivity"
                tools:showIn="@layout/activity_main">

  <ScrollView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/scrollView"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:fillViewport="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/rlTop"
          android:paddingBottom="@dimen/my_padding"
          android:paddingTop="@dimen/my_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/name"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginBottom="@dimen/my_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:theme="@style/header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_in_process"
            android:id="@+id/status"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/name"
            android:background="@drawable/status_background_in_progress"
            android:layout_marginBottom="@dimen/my_margin"
            android:theme="@style/whiteStyle"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

      </RelativeLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/divider_height"
          android:background="@android:color/darker_gray"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="@dimen/my_padding"
          android:paddingTop="@dimen/my_padding"
          android:id="@+id/rlCreated">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/created"
            android:id="@+id/created"
            android:theme="@style/greyStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_date"
            android:id="@+id/createdDate"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:theme="@style/blackStyle"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
      </RelativeLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/divider_height"
          android:background="@android:color/darker_gray"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="@dimen/my_padding"
          android:paddingTop="@dimen/my_padding"
          android:id="@+id/rlRegistered">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/registered"
            android:id="@+id/registered"
            android:theme="@style/greyStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered_date"
            android:id="@+id/registeredDate"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:theme="@style/blackStyle"/>
      </RelativeLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/divider_height"
          android:background="@android:color/darker_gray"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="@dimen/my_padding"
          android:paddingTop="@dimen/my_padding"
          android:id="@+id/rlSolve">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/solve_to"
            android:id="@+id/solveto"
            android:theme="@style/greyStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solve_to_date"
            android:id="@+id/solvetoDate"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:theme="@style/blackStyle"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
      </RelativeLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/divider_height"
          android:background="@android:color/darker_gray"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="@dimen/my_padding"
          android:paddingTop="@dimen/my_padding"
          android:id="@+id/rlResponsible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/responcible"
            android:id="@+id/responcible"
            android:theme="@style/greyStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/responcible_name"
            android:id="@+id/responcibleName"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:theme="@style/blackStyle"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
      </RelativeLayout>
      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/divider_height"
          android:background="@android:color/darker_gray"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:text="@string/description"
          android:id="@+id/description"
          android:paddingTop="@dimen/my_padding_img"
          android:paddingBottom="@dimen/my_padding"
          android:theme="@style/blackStyle"/>

      <android.support.v7.widget.RecyclerView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/recyclerView"/>
    </LinearLayout>
  </ScrollView>
</RelativeLayout>
